# Building-Trustworthy-LLM-Agent-Evaluations

./: .gitignore  LICENSE  Makefile  README.md  conftest.py  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
docs/: CONCEPTS.md  README.md
examples/: 01_synthetic_dataset.py  02_build_and_validate_judge.py  03_pairwise_vs_rubric.py  04_biases.py  05_jury.py  06_calibration.py  07_rag_end_to_end.py  08_frameworks.py  09_agent_eval.py  10_benchmarks.py  11_harness_engineering.py  12_deep_agent_wiki.py  13_better_harness.py  README.md  _bootstrap.py  run_all.py
tests/: test_agent_eval.py  test_benchmarks.py  test_better_harness.py  test_biases.py  test_calibration.py  test_datasets.py  test_deep_agent.py  test_frameworks.py  test_harness.py  test_judge.py  test_jury.py  test_metrics.py  test_protocols.py  test_rag_eval.py
trustworthy_evals/: __init__.py  agent_eval.py  benchmarks.py  better_harness.py  biases.py  calibration.py  datasets.py  deep_agent.py  frameworks.py  harness.py  judge.py  jury.py  llm.py  metrics.py  prompts.py  protocols.py  rag_eval.py
