[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "trustworthy-evals"
version = "0.1.0"
description = "Runnable companion code for the 'Building Trustworthy LLM & Agent Evaluations' tutorial"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["llm", "evaluation", "llm-as-a-judge", "agents", "rag", "ragas", "deepeval"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# The core package is pure standard library -- no runtime dependencies. Every
# example and test runs offline against the simulated judge.
dependencies = []

[project.optional-dependencies]
# Real-LLM judge adapters (only needed if you swap out the SimulatedJudge).
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.40"]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["trustworthy_evals"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
